<resources>
    <string name="app_name">NostraGamus Rummy</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">Taj\nRummy</string>
    <string name="facebook_app_id">1750143415238428</string>
    <string name="fb_login_protocol_scheme">fb1750143415238428</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="new_user">New user ?</string>
    <string name="create">Create</string>
    <string name="already_have_account">Already have Taj Rummy account ?</string>
    <string name="email_support_centre">Email Support Centre</string>
    <string name="name_username">Name/Username</string>
    <string name="email">E-mail</string>
    <string name="issue_query">Issue/Query</string>
    <string name="details_desc_issue_query">Detailed description of issue/query</string>
    <string name="enter_email">Enter your E-mail ID to request a password reset</string>
    <string name="enter_email_hint">Enter your E-mail ID </string>
    <string name="return_login">Return to login ?</string>
    <string name="submit">Submit</string>
    <string name="cashier">Cashier</string>
    <string name="support">Support</string>
    <string name="more">More</string>
    <string name="tpl">Rummy Premier League</string>
    <string name="unique_features">Unique Features</string>
    <string name="testimonials">Testimonials</string>
    <string name="promotions">Promotions</string>
    <string name="chips">Chips:</string>
    <string name="variants">Variants:</string>
    <string name="type">Type:</string>
    <string name="bet">Bet:</string>
    <string name="status">Status:</string>
    <string name="cash">Cash</string>
    <string name="tournaments">Tournaments</string>
    <string name="view_all">View All</string>
    <string name="low">Low</string>
    <string name="select">Select</string>
    <string name="tourney_id">Tourney ID</string>
    <string name="entry">Entry</string>
    <string name="cash_prize">Cash Prize</string>
    <string name="start_time">Start Time</string>
    <string name="status_">Status</string>
    <string name="players">Players</string>
    <string name="join_">Join</string>
    <string name="schedules_and_tables">Schedules &amp; tables</string>
    <string name="tourney_and_prize_info">Tourney &amp; Prize info</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="title_activity_splash_screen">Taj Rummy</string>
    <string name="title_activity_loby">Loby</string>
    <string name="title_activity_loby_full_screen">LobyFullScreen</string>
    <string name="account_overview">Account Overview</string>
    <string name="username">Username</string>
    <string name="cash_balance">Cash balance</string>
    <string name="fun_chips">Fun chips</string>
    <string name="loyalty_club_status">Loyalty points and Club status</string>
    <string name="player_status">Player status</string>
    <string name="kyc_completed">KYC completed</string>
    <string name="buy_chips">Buy Chips</string>
    <string name="real_chips">Real Chips</string>
    <string name="in_play">In Play</string>
    <string name="fun_chips_camel_case">Fun Chips</string>
    <string name="cash_games">Cash Games</string>
    <string name="free_games">Free Games</string>
    <string name="dart">Dart game</string>
    <string name="piku">Pikachu</string>
    <string name="bowl">Bowling</string>
    <string name="venonat">Venonat</string>
    <string name="email_us">E-mail us</string>
    <string name="live_chat">Live chat</string>
    <string name="deposit">Deposit</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="select_deposit_amount">Select Deposit Amount</string>
    <string name="choose_bonus">Choose Bonus</string>
    <string name="choose_payment_option">Choose Payment Option</string>
    <string name="done">Done</string>
    <string name="select_amount">Select Amount</string>
    <string name="quick_select">Quick Select</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="free">Free</string>
    <string name="loyalty">Loyalty</string>
    <string name="pools">Pools</string>
    <string name="deals">Deals</string>
    <string name="points">Points</string>
    <string name="favorties">Favorties</string>
    <string name="eligible_tourneys">Eligible Tourneys</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="running">Running</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="closed_deck">CLOSED DECK</string>
    <string name="open_deck">OPEN DECK</string>
    <string name="closed_card">CLOSED CARD</string>
    <string name="joker">JOKER</string>
    <string name="sort">SORT</string>
    <string name="drop">DROP</string>
    <string name="declare">DECLARE</string>
    <string name="extra_time">EXTRA\nTIME</string>
    <string name="discard">Discard</string>
    <string name="group">Group</string>
    <string name="min_buyin">Min Buy In</string>
    <string name="max_buyin">Max Buy In</string>
    <string name="balance">Balance</string>
    <string name="buy_in">Buy In</string>
    <string name="cancel">Cancel</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="attachment_download_failed_message">Failed to download. Tap to retry.</string>
    <string name="attachment_open_error_message">Can\'t open attachment</string>
    <string name="attachment_upload_access_error_message">Error accessing file</string>
    <string name="attachment_upload_size_limit_error_message">File size too large</string>
    <string name="attachment_upload_source_camera_button">Take photo</string>
    <string name="attachment_upload_source_gallery_button">Attach photo</string>
    <string name="attachment_upload_type_error_message">File type not permitted</string>
    <string name="chat_account_offline_message">There are currently no agents online.</string>
    <string name="chat_activity_title">Chat</string>
    <string name="chat_agent_joined_message">%1$s joined the chat</string>
    <string name="chat_agent_left_message">%1$s left the chat</string>
    <string name="chat_end_dialog_cancel_button">Cancel</string>
    <string name="chat_end_dialog_confirm_button">End</string>
    <string name="chat_end_dialog_message">Your chat session will be closed</string>
    <string name="chat_end_dialog_title">End this chat?</string>
    <string name="chat_ended_message">Chat ended</string>
    <string name="chat_loading_message">Starting chat…</string>
    <string name="chat_menu_end_button">End chat</string>
    <string name="chat_session_timeout_message">We\'ve not heard from you for a while so this chat session has been closed. Please start a new chat if you still have questions.</string>
    <string name="chat_visitor_queue_message">Please wait for an agent. There are currently %1$s visitor(s) waiting to be served.</string>
    <string name="game_info">Game Information</string>
    <string name="game_info_entry_fee">Entry Fee</string>
    <string name="game_info_extra_time">Extra Time</string>
    <string name="game_info_first_drop">First Drop</string>
    <string name="game_info_full_count">Full Count</string>
    <string name="game_info_game_id">Game ID</string>
    <string name="game_info_max_extra_time_move">Max Extra Time / Move</string>
    <string name="game_info_middle_drop">Middle Drop</string>
    <string name="game_info_more_info_header">More Info</string>
    <string name="game_info_move_time">Move Time</string>
    <string name="game_info_table_id">Table ID</string>
    <string name="game_info_time_header">Time</string>
    <string name="game_results_count_header">Count</string>
    <string name="game_results_name_header">Name</string>
    <string name="game_results_result_header">Result</string>
    <string name="game_results_show_cards_header">Show Cards</string>
    <string name="game_results_total_count_header">Total Count</string>
    <string name="lobby_game_type_title">Game Type</string>
    <string name="lobby_variants_title">Variants</string>
</resources>