<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/gameSettingsViewWidth"
    android:layout_height="match_parent"
    android:background="@color/black_trans85"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right"
        android:gravity="right"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pop_up_close_btn"
                android:layout_width="@dimen/settingsCloseBtnSize"
                android:layout_height="@dimen/settingsCloseBtnSize"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/marginSizeSmallPlus"
                android:contentDescription="closebtn"
                android:src="@drawable/close" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <ImageView
                    android:layout_width="@dimen/popUpCloseBtnSize"
                    android:layout_height="@dimen/popUpCloseBtnSize"
                    android:layout_marginRight="@dimen/marginSizeSmallPlus"
                    android:src="@drawable/info" />

                <in.glg.rummy.view.RummyTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_info"
                    android:textColor="@color/White"
                    android:textSize="@dimen/settingsViewTitleTextSize" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <in.glg.rummy.view.RummyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lobby_game_type_title"
                android:textColor="@color/highlight_font_color"
                android:textSize="@dimen/settingsViewInfoTitleTextSize" />

            <in.glg.rummy.view.RummyTextView
                android:id="@+id/game_info_game_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginSizeSmall"
                android:textColor="@color/White"
                android:textSize="@dimen/settingsViewInfoValueTextSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginSizeExtraLargePlus"
            android:orientation="vertical">

            <in.glg.rummy.view.RummyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lobby_variants_title"
                android:textColor="@color/highlight_font_color"
                android:textSize="@dimen/settingsViewInfoTitleTextSize" />

            <in.glg.rummy.view.RummyTextView
                android:id="@+id/game_info_game_variant_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginSizeSmall"
                android:textColor="@color/White"
                android:textSize="@dimen/settingsViewInfoValueTextSize" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginSizeExtraLarge"
        android:orientation="horizontal"
        android:weightSum="1.0">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.22"
        android:orientation="vertical">

        <in.glg.rummy.view.RummyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_info_entry_fee"
            android:textColor="@color/highlight_font_color"
            android:textSize="@dimen/settingsViewInfoTitleTextSize" />

        <in.glg.rummy.view.RummyTextView
            android:id="@+id/entry_fee_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSizeSmall"
            android:textColor="@color/White"
            android:textSize="@dimen/settingsViewInfoValueTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginSizeLarge"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <in.glg.rummy.view.RummyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_info_first_drop"
            android:textColor="@color/highlight_font_color"
            android:textSize="@dimen/settingsViewInfoTitleTextSize" />

        <in.glg.rummy.view.RummyTextView
            android:id="@+id/first_drop_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSizeSmall"
            android:textColor="@color/White"
            android:textSize="@dimen/settingsViewInfoValueTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginSizeLarge"
        android:layout_weight="0.28"
        android:orientation="vertical">

        <in.glg.rummy.view.RummyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_info_middle_drop"
            android:textColor="@color/highlight_font_color"
            android:textSize="@dimen/settingsViewInfoTitleTextSize" />

        <in.glg.rummy.view.RummyTextView
            android:id="@+id/middle_drop_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSizeSmall"
            android:textColor="@color/White"
            android:textSize="@dimen/settingsViewInfoValueTextSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginSizeLarge"
        android:layout_weight="0.25"
        android:orientation="vertical">

        <in.glg.rummy.view.RummyTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_info_full_count"
            android:textColor="@color/highlight_font_color"
            android:textSize="@dimen/settingsViewInfoTitleTextSize" />

        <in.glg.rummy.view.RummyTextView
            android:id="@+id/full_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSizeSmall"
            android:textColor="@color/White"
            android:textSize="@dimen/settingsViewInfoValueTextSize" />
    </LinearLayout>
</LinearLayout>

        <View
            android:background="@color/White"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/marginSizeMedium" />

        <in.glg.rummy.view.RummyTextView
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/game_info_time_header" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSizeSmallPlus"
            android:weightSum="1.0">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">
                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoTitleTextSize"
                    android:textColor="@color/highlight_font_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_info_move_time" />

                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoValueTextSize"
                    android:textColor="@color/White"
                    android:id="@+id/move_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginSizeSmall" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25">
                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoTitleTextSize"
                    android:textColor="@color/highlight_font_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_info_extra_time" />

                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoValueTextSize"
                    android:textColor="@color/White"
                    android:layout_gravity="center|left"
                    android:id="@+id/extra_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginSizeSmall" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/marginSizeLarge"
                android:layout_weight="0.5">
                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoTitleTextSize"
                    android:textColor="@color/highlight_font_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_info_max_extra_time_move" />

                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoValueTextSize"
                    android:textColor="@color/White"
                    android:layout_gravity="center|left"
                    android:id="@+id/max_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginSizeSmall" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin">
                <in.glg.rummy.view.RummyTextView
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@color/highlight_font_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Full Count" />

                <in.glg.rummy.view.RummyTextView
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/White"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginSizeSmall"
                    android:text="40" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:background="@color/White"
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="@dimen/marginSizeMedium" />

        <in.glg.rummy.view.RummyTextView
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/game_info_more_info_header" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:weightSum="1.0">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoTitleTextSize"
                    android:textColor="@color/highlight_font_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_info_table_id" />

                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoValueTextSize"
                    android:textColor="@color/White"
                    android:id="@+id/game_info_table_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginSizeSmall" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoTitleTextSize"
                    android:textColor="@color/highlight_font_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/game_info_game_id" />

                <in.glg.rummy.view.RummyTextView
                    android:textSize="@dimen/settingsViewInfoValueTextSize"
                    android:textColor="@color/White"
                    android:id="@+id/game_info_game_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/marginSizeSmall" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
